--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 theme: jekyll-theme-slate
+title: <a href="README.ru-RU" style="float:right;"><img src="screenshots/russia-flag-icon-32.png"></a>
 show_downloads: true
 github:
   zip_url: https://github.com/VladimirKalachikhin/Galadriel-map/raw/master/distr/GaladrielMap.zip
