--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-slate
-title: Web tile maps viewer
-description: <a href="README.ru-RU" style="float:right;"><img src="screenshots/russia-flag-icon-32.png"></a>
+description: Web tile maps viewer
+title: <a href="README.ru-RU" style="float:right;"><img src="screenshots/russia-flag-icon-32.png"></a>
 show_downloads: true
 github:
   zip_url: https://github.com/VladimirKalachikhin/Galadriel-map/raw/master/distr/GaladrielMap.zip
